# BroKnowMySparkAnalyzer

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: deploy-pages.yml  publish-npm.yml  release.yml
scripts/: agent-smoke.mjs  inspect-sparkprofile.mjs
src/: App.vue  ai.ts  main.ts  report.ts  sparkAnalyzerAdapter.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
