[package]
name = "bro-know-my-spark-analyzer"
version = "0.1.0"
description = "Local spark report analyzer with configurable AI review"
authors = ["HALO"]
license = "MIT"
edition = "2021"

[lib]
name = "bro_know_my_spark_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
base64 = "0.22"
